force-app/main/default/objects/Organisationspunkt__c/Organisationspunkt__c.object-meta.xml
<CustomObject>
    <label>Organisationspunkt</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisationspunkte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>