force-app/main/default/objects/Organisationspunkt__c/fields/Anbieter__c.field-meta.xml
<CustomField>
    <fullName>Anbieter__c</fullName>
    <label>Anbieter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>