force-app/main/default/objects/Organisationspunkt__c/fields/Anzahl_Teilnehmer__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Teilnehmer__c</fullName>
    <label>Anzahl Teilnehmer</label>
    <summaryForeignKey>OP_Teilnehmer__c.Organisationspunkt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>