force-app/main/default/objects/Organisationspunkt__c/fields/Bemerkung__c.field-meta.xml
<CustomField>
    <fullName>Bemerkung__c</fullName>
    <label>Bemerkung</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>