force-app/main/default/objects/Organisationspunkt__c/fields/Distribute__c.field-meta.xml
<CustomField>
    <fullName>Distribute__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Gleichmäßig auf Teilnehmer aufteilen</label>
    <type>Checkbox</type>
</CustomField>