force-app/main/default/objects/Organisationspunkt__c/fields/Istkosten__c.field-meta.xml
<CustomField>
    <fullName>Istkosten__c</fullName>
    <label>Istkosten</label>
    <summarizedField>Zahlung__c.Zahlbetrag__c</summarizedField>
    <summaryForeignKey>Zahlung__c.Organisationspunkt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>