force-app/main/default/objects/Organisationspunkt__c/fields/Istkosten_verteilt__c.field-meta.xml
<CustomField>
    <fullName>Istkosten_verteilt__c</fullName>
    <label>Istkosten verteilt</label>
    <summarizedField>OP_Teilnehmer__c.Istkosten_Gesamt__c</summarizedField>
    <summaryForeignKey>OP_Teilnehmer__c.Organisationspunkt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>