force-app/main/default/objects/Organisationspunkt__c/fields/Kostenverteilung_Individuell__c.field-meta.xml
<CustomField>
    <fullName>Kostenverteilung_Individuell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kostenverteilung Individuell</label>
    <type>Checkbox</type>
</CustomField>