force-app/main/default/objects/Organisationspunkt__c/fields/Max_Teilnehmer__c.field-meta.xml
<CustomField>
    <fullName>Max_Teilnehmer__c</fullName>
    <label>Max Teilnehmer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>