force-app/main/default/objects/Organisationspunkt__c/fields/Organisator__c.field-meta.xml
<CustomField>
    <fullName>Organisator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organisator</label>
    <referenceTo>Teilnehmer__c</referenceTo>
    <relationshipLabel>organisiert</relationshipLabel>
    <relationshipName>Organisationspunkte_Organisator</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>