force-app/main/default/objects/Organisationspunkt__c/fields/Plankosten__c.field-meta.xml
<CustomField>
    <fullName>Plankosten__c</fullName>
    <label>Plankosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>