force-app/main/default/objects/Organisationspunkt__c/fields/Plankosten_verteilt__c.field-meta.xml
<CustomField>
    <fullName>Plankosten_verteilt__c</fullName>
    <label>Plankosten verteilt</label>
    <summarizedField>OP_Teilnehmer__c.Plankosten_Gesamt__c</summarizedField>
    <summaryForeignKey>OP_Teilnehmer__c.Organisationspunkt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>