force-app/main/default/objects/Organisationspunkt__c/fields/Referenz__c.field-meta.xml
<CustomField>
    <fullName>Referenz__c</fullName>
    <label>Referenz</label>
    <length>100</length>
    <type>Text</type>
</CustomField>