force-app/main/default/objects/Organisationspunkt__c/fields/Reise__c.field-meta.xml
<CustomField>
    <fullName>Reise__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reise</label>
    <referenceTo>Reise__c</referenceTo>
    <relationshipLabel>Organisationspunkte</relationshipLabel>
    <relationshipName>Organisationspunkte</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>