force-app/main/default/objects/Organisationspunkt__c/fields/Sortierung__c.field-meta.xml
<CustomField>
    <fullName>Sortierung__c</fullName>
    <label>Sortierung</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>