force-app/main/default/objects/Organisationspunkt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&#39;Planung&#39;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planung</fullName>
                <default>true</default>
                <label>Planung</label>
            </value>
            <value>
                <fullName>In Arbeit</fullName>
            </value>
            <value>
                <fullName>Abgeschlossen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>