force-app/main/default/objects/Organisationspunkt__c/fields/Typ__c.field-meta.xml
<CustomField>
    <fullName>Typ__c</fullName>
    <label>Typ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flug</fullName>
            </value>
            <value>
                <fullName>Flug individuell</fullName>
            </value>
            <value>
                <fullName>Unterkunft</fullName>
            </value>
            <value>
                <fullName>Mietwagen</fullName>
            </value>
            <value>
                <fullName>Versicherung</fullName>
            </value>
            <value>
                <fullName>Mieträder</fullName>
            </value>
            <value>
                <fullName>Parkplatz</fullName>
            </value>
            <value>
                <fullName>Anfahrt</fullName>
            </value>
            <value>
                <fullName>Benzin</fullName>
            </value>
            <value>
                <fullName>Ausgaben vor Ort</fullName>
            </value>
            <value>
                <fullName>Anzahlung</fullName>
            </value>
            <value>
                <fullName>Rückerstattung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>