force-app/main/default/objects/Organisationspunkt__c/fields/Verantwortlich__c.field-meta.xml
<CustomField>
    <fullName>Verantwortlich__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Verantwortlich</label>
    <referenceTo>Teilnehmer__c</referenceTo>
    <relationshipLabel>verantwortlich für</relationshipLabel>
    <relationshipName>Organisationspunkte_Verantwortlich</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>