force-app/main/default/objects/Organisationspunkt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Anzahl_Teilnehmer__c</columns>
    <columns>Anbieter__c</columns>
    <columns>Reise__c</columns>
    <columns>Typ__c</columns>
    <columns>Status__c</columns>
    <columns>Organisator__c</columns>
    <columns>Plankosten__c</columns>
    <columns>Istkosten__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>