force-app/main/default/objects/Organisationspunkt__c/listViews/Ullis_Aufgaben.listView-meta.xml
<ListView>
    <fullName>Ullis_Aufgaben</fullName>
    <columns>NAME</columns>
    <columns>Typ__c</columns>
    <columns>Anbieter__c</columns>
    <columns>Plankosten__c</columns>
    <columns>Istkosten__c</columns>
    <columns>Bemerkung__c</columns>
    <columns>Buchungsdatum__c</columns>
    <columns>Referenz__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Organisator__c</field>
        <operation>contains</operation>
        <value>Thome</value>
    </filters>
    <label>Ulli&#39;s Aufgaben</label>
</ListView>